[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/plane.obj" type="ArrayMesh" id=1]
[ext_resource path="res://models/ground_v3.obj" type="ArrayMesh" id=2]
[ext_resource path="res://scripts/plane_cont_controls.gd" type="Script" id=3]
[ext_resource path="res://scripts/plane_following_camera.gd" type="Script" id=4]
[ext_resource path="res://assets/tree_1.obj" type="ArrayMesh" id=5]
[ext_resource path="res://Goal.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/manager.gd" type="Script" id=7]
[ext_resource path="res://assets/characters/0.jpg" type="Texture" id=8]
[ext_resource path="res://scripts/score_label.gd" type="Script" id=9]
[ext_resource path="res://assets/fonts/new_dynamicfont.tres" type="DynamicFont" id=10]
[ext_resource path="res://scripts/CenterContainer.gd" type="Script" id=11]
[ext_resource path="res://scripts/RichTextLabel.gd" type="Script" id=12]

[sub_resource type="SpatialMaterial" id=1]

[sub_resource type="CapsuleShape" id=2]
radius = 1.79008
height = 3.57054

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.780392, 0.780392, 0.780392, 1 )

[sub_resource type="CylinderMesh" id=9]
height = 0.001
radial_segments = 16

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SphereMesh" id=8]
radius = 0.5
height = 1.0

[sub_resource type="BoxShape" id=5]
extents = Vector3( 8.2897, 0.308536, 9.32078 )

[sub_resource type="MeshLibrary" id=6]

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.733333, 0.698039, 0.698039, 1 )

[sub_resource type="Theme" id=14]
default_font = ExtResource( 10 )

[node name="Spatial" type="Spatial"]

[node name="Manager" type="Node" parent="."]
script = ExtResource( 7 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.0717955, 0.996274, -0.0477775, 0.05348, 0.043987, 0.9976, 0.995985, -0.0741783, -0.0501227, -90.5818, 60.9956, 4.55313 )
light_color = Color( 0.443137, 0.807843, 0.713726, 1 )
light_energy = 1.05
light_bake_mode = 2
shadow_enabled = true
shadow_bias = 1.89
shadow_reverse_cull_face = true
directional_shadow_mode = 0

[node name="plane" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.58774, 0 )
script = ExtResource( 3 )

[node name="PlaneMesh" type="MeshInstance" parent="plane"]
mesh = ExtResource( 1 )
material/0 = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Area" type="Area" parent="plane/PlaneMesh"]

[node name="CollisionShape" type="CollisionShape" parent="plane/PlaneMesh/Area"]
shape = SubResource( 2 )

[node name="JetTrail" type="CPUParticles" parent="plane"]
transform = Transform( 1, 0, 0, 0, 0.0343412, 0.99941, 0, -0.99941, 0.0343412, 0, -0.554825, -2.99133 )
material_override = SubResource( 7 )
amount = 3
lifetime = 0.23
preprocess = 1.39
speed_scale = 0.47
explosiveness = 0.15
mesh = SubResource( 9 )
direction = Vector3( 0, 1, 0 )
spread = 10.23
gravity = Vector3( 0, 0, 0 )
initial_velocity = 21.63

[node name="CrashSmoke" type="CPUParticles" parent="plane"]
material_override = SubResource( 10 )
emitting = false
amount = 6
lifetime = 0.34
preprocess = 1.39
speed_scale = 0.33
explosiveness = 0.15
local_coords = false
mesh = SubResource( 8 )
direction = Vector3( 0, 1, 0 )
spread = 10.23
gravity = Vector3( 0, -9.1, 0 )
initial_velocity = 23.7
color = Color( 0, 0, 0, 1 )

[node name="TheLand" type="Spatial" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="ground" type="MeshInstance" parent="TheLand"]
transform = Transform( 10, 0, 0, 0, 5, 0, 0, 0, 10, 0, -1.22383, 0 )
mesh = ExtResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": "	1"
}

[node name="kill_area" type="Area" parent="TheLand/ground"]
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="TheLand/ground/kill_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.431314, 0 )
shape = SubResource( 5 )

[node name="ground5" type="MeshInstance" parent="TheLand"]
transform = Transform( 10, 0, 0, 0, 5, 0, 0, 0, 10, 0, -1.22383, -154 )
mesh = ExtResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": "	1"
}

[node name="kill_area" type="Area" parent="TheLand/ground5"]
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="TheLand/ground5/kill_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.431314, 0 )
shape = SubResource( 5 )

[node name="ground6" type="MeshInstance" parent="TheLand"]
transform = Transform( 10, 0, 0, 0, 5, 0, 0, 0, 10, 153, -1.22383, -154 )
mesh = ExtResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": "	1"
}

[node name="kill_area" type="Area" parent="TheLand/ground6"]
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="TheLand/ground6/kill_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.431314, 0 )
shape = SubResource( 5 )

[node name="ground7" type="MeshInstance" parent="TheLand"]
transform = Transform( 10, 0, 0, 0, 5, 0, 0, 0, 10, -152, -1.22383, -154 )
mesh = ExtResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": "	1"
}

[node name="kill_area" type="Area" parent="TheLand/ground7"]
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="TheLand/ground7/kill_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.431314, 0 )
shape = SubResource( 5 )

[node name="ground8" type="MeshInstance" parent="TheLand"]
transform = Transform( 10, 0, 0, 0, 5, 0, 0, 0, 10, -152, -1.22383, 4 )
mesh = ExtResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": "	1"
}

[node name="kill_area" type="Area" parent="TheLand/ground8"]
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="TheLand/ground8/kill_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.431314, 0 )
shape = SubResource( 5 )

[node name="ground9" type="MeshInstance" parent="TheLand"]
transform = Transform( 10, 0, 0, 0, 5, 0, 0, 0, 10, -152, -1.22383, 158 )
mesh = ExtResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": "	1"
}

[node name="kill_area" type="Area" parent="TheLand/ground9"]
collision_layer = 2147483650

[node name="CollisionShape" type="CollisionShape" parent="TheLand/ground9/kill_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.431314, 0 )
shape = SubResource( 5 )

[node name="ground4" type="MeshInstance" parent="TheLand"]
transform = Transform( 10, 0, 0, 0, 5, 0, 0, 0, 10, 156, -1.22383, 0 )
mesh = ExtResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": "	1"
}

[node name="kill_area" type="Area" parent="TheLand/ground4"]
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="TheLand/ground4/kill_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.431314, 0 )
shape = SubResource( 5 )

[node name="ground2" type="MeshInstance" parent="TheLand"]
transform = Transform( 10, 0, 0, 0, 5, 0, 0, 0, 10, 0, -1.22383, 158 )
mesh = ExtResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": "	1"
}

[node name="kill_area" type="Area" parent="TheLand/ground2"]
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="TheLand/ground2/kill_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.431314, 0 )
shape = SubResource( 5 )

[node name="ground3" type="MeshInstance" parent="TheLand"]
transform = Transform( -4.37114e-07, 0, -10, 0, 5, 0, 10, 0, -4.37114e-07, 156, 0.776169, 158 )
mesh = ExtResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": "	1"
}

[node name="kill_area" type="Area" parent="TheLand/ground3"]
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="TheLand/ground3/kill_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.431314, 0 )
shape = SubResource( 5 )

[node name="trees" type="Spatial" parent="."]

[node name="tree_1" type="MeshInstance" parent="trees"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.8144, -2.44954, 13.7164 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null
material/2 = null

[node name="tree_2" type="MeshInstance" parent="trees"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.97453, -2.44954, -14.2097 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null
material/2 = null

[node name="tree_3" type="MeshInstance" parent="trees"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -31.1864, -2.44954, 7.9435 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null
material/2 = null

[node name="tree_4" type="MeshInstance" parent="trees"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.3, -2.40963, -22.4963 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null
material/2 = null

[node name="tree_5" type="MeshInstance" parent="trees"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20.0869, -3.16754, 29.6733 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null
material/2 = null

[node name="tree_6" type="MeshInstance" parent="trees"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26.4506, -2.44954, -21.3602 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null
material/2 = null

[node name="tree_7" type="MeshInstance" parent="trees"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -54.3424, -2.44954, 44.1141 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null
material/2 = null

[node name="tree_8" type="MeshInstance" parent="trees"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 35.5883, -2.44954, 7.9435 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null
material/2 = null

[node name="tree_9" type="MeshInstance" parent="trees"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.2361, -2.44954, -6.21866 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null
material/2 = null

[node name="tree_10" type="MeshInstance" parent="trees"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.2361, -2.44954, 29.2899 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null
material/2 = null

[node name="Goal" parent="." instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 1, 0, 7.20422, 7.65023 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.866025, 0.353554, -0.353554, 0, 0.707107, 0.707107, 0.5, 0.612372, -0.612372, -20.0119, 46.6595, -46.7415 )
projection = 1
current = true
size = 106.246
near = 0.02
far = 474.7
script = ExtResource( 4 )

[node name="GridMap" type="GridMap" parent="."]
mesh_library = SubResource( 6 )
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -36.0
margin_bottom = -3.0
size_flags_stretch_ratio = 5.02
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CenterContainer"]
show_behind_parent = true
margin_left = 706.0
margin_top = 672.0
margin_right = 1306.0
margin_bottom = 1372.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 600, 700 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/Panel"]
anchor_left = 0.021
anchor_top = 0.129
anchor_right = 0.021
anchor_bottom = 0.129
margin_left = 36.4
margin_top = 67.7
margin_right = 557.4
margin_bottom = 222.7
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 30, 30 )
theme = SubResource( 14 )
custom_constants/shadow_as_outline = 6
bbcode_enabled = true
bbcode_text = "[center][color=blue][u]NOTE: Cat on joystick[/u][/color][/center]"
text = "NOTE: Cat on joystick"
fit_content_height = true
scroll_active = false
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_label" type="TextureRect" parent="."]
margin_top = 0.571426
margin_right = 111.0
margin_bottom = 186.571
texture = ExtResource( 8 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="TheLand/ground/kill_area" to="plane" method="_on_kill_area_entered"]
